# lambda

./: README.md  lambda.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.10.1/: lambda-0.1.0.0-inplace.conf  package.cache
lib/: Lambda.hs
test/: Main.hs
